@@ -5,6 +5,7 @@
 - SHIFT+X to close all-but selected tabs.
 - SHIFT+A to select all tabs.
 - Mark tabs with a label.
+- Select tabs by label.
 
 2025-Dec-25:
 - When the GUI is escaped, return focus to last focused application before the interruption.
@@ -54,3 +55,5 @@ TODO:
 - Marked tabs should create a tab group in the browser.
 - Mark all tabs older than N hours/days/weeks.
 - Unify accent color of GUI.
+- Remove label from single/select tab & Remove label from all tabs.
+- Save labels and tab information to local appdata.
